# ContentOps

./: .codespellrc  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESIGN.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  TRADEMARK.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: alerts-report.yml  attack-matrix-refresh.yml  audit-verify.yml  ci.yml  (+30 more)
config/: kql_lint_allowlist.yml.example  lint_strict.yml.example  tenant.integration.yml.example  tenant.yml.example
contentops/: __main__.py  apply_report.py  audit_filter.py  audit_query.py  config.py  defender_extensions_probe.py  defender_roundtrip.py  drift_resolve.py  drift_suppressions.py  explain.py  lifecycle.py  models.py  ownership.py  restore.py  rollback.py  sentinel_roundtrip.py  snapshot_diff.py  state.py  state_sync.py  tuning.py  undeployed.py  workspace_kql.py
coverage/: badge.json  navigator-layer.json
detections/: README.md
docs/: OPERATOR_GUIDE.md  demo-runbook.md  emergency-disable-workflow.md  glossary.md  onboarding.md  quickstart.md  troubleshooting.md
reports/: 2026-05-23.html  2026-05-23.json  2026-05-25.html  2026-05-25.json  2026-05-26.html  2026-05-26.json  2026-05-27.html  2026-05-27.json  2026-05-29.html  2026-05-29.json  2026-06-01.html  2026-06-01.json  2026-06-03.html  2026-06-03.json  badge.json  latest.html  latest.json  latest.md
scripts/: add_spdx_headers.py  build_kql_strict.ps1  build_kql_strict.sh  check_references.py  check_version_bump.py  detect_production_promotions.py  list_missing_metadata.py  migrate_tenant_config.py  refresh_attack_matrix.py  remediate_payload001.py  run-capability-tests.ps1
tests/: conftest.py  test_defender_deploy.py  test_models.py  test_yaml_io.py
(+422 files in other folders)
